# rickd-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
resources/: col_desc_mapping.csv  injured_joint_mapping.csv  injured_joint_side_mapping.csv  injury_code_mapping.csv  injury_desc_mapping.csv  self_select_injury_code_mapping.csv  self_select_injury_desc_mapping.csv
src/: ga_demo.py  test_cleaning.py
src/core/: __init__.py  constants.py  data_quality.py  injury_data_cleaning.py  processing.py  utils.py
src/notebooks/: 01_eda_1_general.ipynb  02_eda_2_data_cleaning.ipynb  03.2_eda_3.2_extract_running_session_data_multithreading.ipynb  03.3_eda_3.3_extract_running_session_data_3_multi_process.ipynb  04_eda_4_analyse_injury_data.ipynb  05.1_eda_5.1_data_exploration_natural_clustering.ipynb  06_classification_6_baseline.ipynb  eda.ipynb  eda_1_general.ipynb  eda_2_data_cleaning.ipynb  eda_3.2_extract_running_session_data_2.ipynb  eda_3.3_extract_running_session_data_3_multi_process.ipynb  eda_3_extract_running_sessions_data.ipynb  eda_4_analyse_injury_data.ipynb  eda_4_session_similarity.ipynb  eda_5_data_exploration_session_similarity.ipynb  eda_5_session_similarity.ipynb  eda_general.ipynb
src/scripts/: clean_injury_data.py
src/suplemental_material/Code/: gait_kinematics.m  gait_steps.m  pca_td.m  pca_to.m  processing_code_example.m
src/suplemental_material/Tutorials/: tutorial_1.ipynb  tutorial_1.mlx  tutorial_2.ipynb  tutorial_2.mlx  tutorial_3.ipynb  tutorial_3.mlx  tutorial_4.ipynb  tutorial_4.mlx  tutorial_5.ipynb  tutorial_5.mlx
