[project]
name = "rickd-analysis"
version = "0.1.0"
description = "Analysis project for RICKD"
authors = [
    {name = "Adrian Zapater", email = "adrianzapater@gmail.com"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
ruff = "^0.1.0"
pre-commit = "^3.3.0"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"] 