[project]
name = "rickd-analysis"
version = "0.1.0"
description = "Analysis project for RICKD"
authors = [
    {name = "Adrian Zapater", email = "adrianzapater@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{include = "core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
plotly = "^6.0.1"
darts = "^0.34.0"
ipykernel = "^6.29.5"
pydantic = "^2.11.7"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
ruff = "^0.1.0"
pre-commit = "^3.3.0"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]
